--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">sungka_project</string>
+    <string name="app_name">Sungka</string>
 
     <string name="action_settings">Settings</string>
     <string name="str_Zero">0</string>
