--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="str_Zero">0</string>
     <string name="str_SinglePlayer">Single Player</string>
+    <string name="str_YourTurn">YOUR TURN</string>
 </resources>
