Added buttons and title for menu. Fixed layout of store cups. Attempted to hide text until fully laid out, but did not work as hoped

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="str_Zero">0</string>
     <string name="str_SinglePlayer">Single Player</string>
     <string name="str_YourTurn">YOUR TURN</string>
+    <string name="strSingleplayer">Sinleplayer</string>
+    <string name="strMultiplayer">Multiplayer</string>
+    <string name="strLeaderboard">Leaderboard</string>
+    <string name="strOptions">Options</string>
 </resources>
