--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
-
     <string name="app_name">Sungka</string>
-
     <string name="action_settings">Settings</string>
     <string name="str_Zero">0</string>
     <string name="str_SinglePlayer">Single Player</string>
@@ -19,8 +17,23 @@
     <string name="str_YouRobbedOtherPlayer">YOU ROBBED THE OTHER PLAYER</string>
     <string name="str_YouWereRobbedOfFinalMove">YOU WERE ROBBED OF YOUR FINAL MOVE</string>
     <string name="str_YouRobbedOtherPlayersFinalMove">YOU ROBBED OTHER PLAYER\'S FINAL MOVE</string>
-    <string name="strSingleplayer">Singleplayer</string>
-    <string name="strMultiplayer">Multiplayer</string>
+    <string name="strPlay">Play</string>
     <string name="strLeaderboard">Leaderboard</string>
-    <string name="strOptions">Options</string>
+    <string name="strPlayer">Player</string>
+    <string name="strNameHolder">...</string>
+    <string name="strVS">VS</string>
+    <string name="strAi">AI</string>
+    <string name="strRemote">Remote</string>
+    <string name="strAiDiff">AI Difficulty</string>
+    <string name="strName">Name:</string>
+    <string name="strJoin">Join</string>
+    <string name="strHost">Host</string>
+    <string name="strIP">IP:</string>
+    <string name="strWaiting">Waiting for player</string>
+    <string name="strSelect">Select:</string>
+    <string name="strPrevious">Previous</string>
+    <string name="msgPlayerName">Please enter player name!</string>
+    <string name="msgPlayer1Name">Please enter player 1 name!</string>
+    <string name="msgPlayer2Name">Please enter player 2 name!</string>
+    <string name="msgIPAddress">Please enter an IP address!</string>
 </resources>
