Added "VS" text scaling. Removed menu images and replaced with XML buttons. Commented places where menu needs hooking into game.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,26 +17,26 @@
     <string name="str_YouRobbedOtherPlayer">YOU ROBBED THE OTHER PLAYER</string>
     <string name="str_YouWereRobbedOfFinalMove">YOU WERE ROBBED OF YOUR FINAL MOVE</string>
     <string name="str_YouRobbedOtherPlayersFinalMove">YOU ROBBED OTHER PLAYER\'S FINAL MOVE</string>
-    <string name="strPlay">Play</string>
-    <string name="strLeaderboard">Leaderboard</string>
-    <string name="strOptions">Options</string>
+    <string name="str_Play">Play</string>
+    <string name="str_Leaderboard">Leaderboard</string>
+    <string name="str_Options">Options</string>
     <string name="str_playerDisconnectedTitle">Player Disconnected</string>
     <string name="str_playerDisconnected">It seems the other player left (rage quit).</string>
-    <string name="strPlayer">Player</string>
-    <string name="strNameHolder">...</string>
-    <string name="strVS">VS</string>
-    <string name="strAi">AI</string>
-    <string name="strRemote">Remote</string>
-    <string name="strAiDiff">AI Difficulty</string>
-    <string name="strName">Name:</string>
-    <string name="strJoin">Join</string>
-    <string name="strHost">Host</string>
-    <string name="strIP">IP:</string>
-    <string name="strWaiting">Waiting for player</string>
-    <string name="strSelect">Select:</string>
-    <string name="strPrevious">Previous</string>
-    <string name="msgPlayerName">Please enter player name!</string>
-    <string name="msgPlayer1Name">Please enter player 1 name!</string>
-    <string name="msgPlayer2Name">Please enter player 2 name!</string>
-    <string name="msgIPAddress">Please enter an IP address!</string>
+    <string name="str_Player">Player</string>
+    <string name="str_NameHolder">...</string>
+    <string name="str_VS">VS</string>
+    <string name="str_Ai">AI</string>
+    <string name="str_Remote">Remote</string>
+    <string name="str_AiDiff">AI Difficulty</string>
+    <string name="str_Name">Name:</string>
+    <string name="str_Join">Join</string>
+    <string name="str_Host">Host</string>
+    <string name="str_IP">IP:</string>
+    <string name="str_Waiting">Waiting for player</string>
+    <string name="str_Select">Select</string>
+    <string name="str_Back">Back</string>
+    <string name="msg_PlayerName">Please enter player name!</string>
+    <string name="msg_Player1Name">Please enter player 1 name!</string>
+    <string name="msg_Player2Name">Please enter player 2 name!</string>
+    <string name="msg_IPAddress">Please enter an IP address!</string>
 </resources>
