--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,9 @@
     <string name="msg_Player2Name">Please enter player 2 name!</string>
     <string name="msg_IPAddress">Please enter an IP address!</string>
     <string name="str_no_stats_data">There are no statistics data. Try playing more games!</string>
+    <string-array name="ai_names">
+        <item>Easy Pete</item>
+        <item>Average Alan</item>
+        <item>TrollMaster 9000</item>
+    </string-array>
 </resources>
