Made sounds happen when shell hits cup, instead of upon moving.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     </string-array>
     <string name="str_tapWhenYourReady">Tap when you\'re ready for countdown\!</string>
     <string name="str_tapAShells">Choose your starting shell</string>
+    <string name="str_ConnectionEst">Connection Established</string>
 
 </resources>
