--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="msg_IPAddress">Please enter an IP address!</string>
     <string name="str_no_stats_data">There are no statistics data. Try playing more games!</string>
     <string name="str_Mute">Mute\nMusic</string>
+    <string name="msg_ReturnToMenu">Return to main menu</string>
     <string-array name="ai_names">
         <item>Easy Pete</item>
         <item>Average Alan</item>
