--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -3,14 +3,14 @@
     <string name="app_name">Sungka</string>
     <string name="action_settings">Nastavení</string>
     <string name="msg_Help"></string>
-    <string name="msg_IPAddress">Prosím zadej IP adresu!</string>
-    <string name="msg_Player1Name">Prosím zadej jméno prvního hráče!</string>
-    <string name="msg_Player2Name">Prosím zadej jméno druhého hráče!</string>
-    <string name="msg_PlayerName">Prosím zadej jméno hráče!</string>
+    <string name="msg_IPAddress">Prosím zadejte IP adresu!</string>
+    <string name="msg_Player1Name">Prosím zadejte jméno prvního hráče!</string>
+    <string name="msg_Player2Name">Prosím zadejte jméno druhého hráče!</string>
+    <string name="msg_PlayerName">Prosím zadejte jméno hráče!</string>
     <string name="msg_ReturnToMenu">Vrátit se na hlavní stránku</string>
     <string name="str_Ai">AI</string>
     <string name="str_AiDiff">Obtížnost</string>
-    <string name="str_AnotherTurn">MÁŠ DALŠÍ TAH</string>
+    <string name="str_AnotherTurn">MÁTE DALŠÍ TAH</string>
     <string name="str_AverageMoveTime">Průměrný čas tahu</string>
     <string name="str_AverageScorePerGame">Průměrný počet bodů ve hře</string>
     <string name="str_Back">Zpátky</string>
@@ -28,24 +28,24 @@
     <string name="str_NameHolder">Jméno</string>
     <string name="str_Options">Nastavení</string>
     <string name="str_Play">Hrát</string>
-    <string name="str_Player">Hráč</string>
-    <string name="str_Remote">Vzdálený Hráč</string>
-    <string name="str_Select">Zvolit</string>
+    <string name="str_Player">Místní</string>
+    <string name="str_Remote">Vzdálený</string>
+    <string name="str_Select">Zvolit Protihráče</string>
     <string name="str_SinglePlayer">Jeden hráč</string>
     <string name="str_Statistics">Statistiky</string>
     <string name="str_VS">VS</string>
     <string name="str_Waiting">Čekání na hráče</string>
-    <string name="str_YouLost">PROHRÁL JSI</string>
+    <string name="str_YouLost">PROHRÁL JSTE</string>
     <string name="str_Zero">0</string>
     <string name="str_playerDisconnectedTitle">Protihráč se odpojil</string>
     <string name="str_tapAShells">Vyberte svojí první mušli</string>
     <string name="str_tapWhenYourReady">Klepněte na obrazovku když budete připravený</string>
-    <string name="str_no_stats_data">Nejsou k dizpozici žádný data. Zkus hrát víc her!</string>
-    <string name="str_YouRobbedOtherPlayer">OKRADL JSI PROTIHRÁČE</string>
-    <string name="str_YouRobbedOtherPlayersFinalMove">OKRADL JSI PROTIHRÁČOVO POSLEDNI TAH</string>
-    <string name="str_YouWereRobbed">BYL JSI OKRAZENÍ</string>
-    <string name="str_YouWereRobbedOfFinalMove">BYL JSI OKRAZENÍ O SVŮJ POSLEDNÍ TAH</string>
-    <string name="str_YouWon">VYHRÁL JSI</string>
+    <string name="str_no_stats_data">Nejsou k dizpozici žádný data. Zkuste hrát víc her!</string>
+    <string name="str_YouRobbedOtherPlayer">OKRADL JSTE PROTIHRÁČE</string>
+    <string name="str_YouRobbedOtherPlayersFinalMove">OKRADL JSTE PROTIHRÁČOVO POSLEDNI TAH</string>
+    <string name="str_YouWereRobbed">BYL JSTE OKRAZENÍ</string>
+    <string name="str_YouWereRobbedOfFinalMove">BYL JSTE OKRAZENÍ O SVŮJ POSLEDNÍ TAH</string>
+    <string name="str_YouWon">VYHRÁL JSTE</string>
     <string name="str_YourTurn">TVOJE KOLO</string>
     <string name="str_playerDisconnected">Vypadá to, že druhý hráč odešel.</string>
 </resources>
