--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,15 @@
     <string name="msg_TutorialEnd"><b>End of Tutorial:</b>
         \nYou can continue playing or you can quit by swiping from the right and using the back button.</string>
 
+    <string name="msg_TutorialRobbing1"><b>Robbing Mechanic:</b>
+        \nOne of the rules in the game of Sungka allows the player to steal all shells from the opponents cup. The rule says that if the last shell of the move lands in an empty cup of yours, except your store, then the last shell and all shell from the cup on the opposite side of the board are moved to your store.
+        \nTry this out yourself, select the highlighted cup and see what happens.</string>
+
+    <string name="msg_TutorialRobbing2"><b>Robbing Mechanic:</b>
+        \nIt is very easy to notice obvious moves that lead to robbing but you should be careful because it is very easy to focus too much on these moves and in the process miss negative effects of them.
+        \nTry it one more time and notice that the same rule applies even when it goes through your opponents cups as long as it ends in your cup.</string>
+
+    <string name="msg_TutorialRobbing3"><b>Robbing Mechanic:</b>
+        \nWhenever you have 15 shells in one of your cups performing an action on that cup will always result in a steal. Press on your leftmost cup and see what happens.</string>
+
 </resources>
