Added lithuanian translated strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="ai_sensei">Sensei Sato</string>
     <string name="student">Student</string>
     <string name="str_tapWhenYourReady">TAP WHEN YOU\'RE READY FOR COUNTDOWN!</string>
-    <string name="str_tapAShells">CHOOSE YOUR STARTING SHELL</string>
+    <string name="str_tapAShells">CHOOSE YOUR STARTING CUP</string>
     <string name="str_ConnectionEst">Connection Established</string>
     <string name="msg_Help"><b>How to play:</b>
         \nYou own the seven cups on your side and your store is the larger cup on your right.
