--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -1,62 +1,62 @@
 <resources>
     <string name="app_name">Sungka</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Nustatymai</string>
     <string name="str_Zero">0</string>
-    <string name="str_SinglePlayer">Single Player</string>
-    <string name="str_YourTurn">YOUR TURN</string>
-    <string name="str_Statistics">STATISTICS</string>
-    <string name="str_AverageMoveTime">Average Move Time</string>
-    <string name="str_HighestCaptureInOneTurn">Highest Capture in One Turn</string>
-    <string name="str_AverageScorePerGame">Average Score per Game</string>
-    <string name="str_HighestNumberOfConsecutiveTurns">Highest Number of Consecutive Turns</string>
-    <string name="str_YouWon">YOU WON</string>
-    <string name="str_YouLost">YOU LOST</string>
-    <string name="str_ItsADraw">IT\'S A DRAW</string>
-    <string name="str_AnotherTurn">YOU GET ANOTHER TURN</string>
-    <string name="str_YouWereRobbed">YOU WERE ROBBED</string>
-    <string name="str_YouRobbedOtherPlayer">YOU ROBBED THE OTHER PLAYER</string>
-    <string name="str_YouWereRobbedOfFinalMove">YOU WERE ROBBED OF YOUR FINAL MOVE</string>
-    <string name="str_YouRobbedOtherPlayersFinalMove">YOU ROBBED OTHER PLAYER\'S FINAL MOVE</string>
-    <string name="str_Play">Play</string>
-    <string name="str_Leaderboard">Leaderboard</string>
-    <string name="str_Tutorial">Tutorial</string>
-    <string name="str_FirstMoveTutorial">First Move</string>
-    <string name="str_ExtraMovesTutorial">Extra Moves</string>
-    <string name="str_RobbingMechanicTutorial">Robbing Rule</string>
-    <string name="str_Options">Options</string>
-    <string name="str_playerDisconnectedTitle">Player Disconnected</string>
-    <string name="str_playerDisconnected">It seems the other player left (rage quit).</string>
-    <string name="str_Player">Player</string>
-    <string name="str_NameHolder">Name</string>
-    <string name="str_IPHolder">IP Address</string>
-    <string name="str_VS">VS</string>
-    <string name="str_Ai">AI</string>
-    <string name="str_Remote">Remote</string>
-    <string name="str_AiDiff">AI Difficulty</string>
-    <string name="str_Name">Name:</string>
-    <string name="str_Join">Join</string>
-    <string name="str_Host">Host</string>
+    <string name="str_SinglePlayer">Vienas Žaidėjas</string>
+    <string name="str_YourTurn">JŪSŲ ĖJIMAS</string>
+    <string name="str_Statistics">STATISTIKA</string>
+    <string name="str_AverageMoveTime">Vidutinė Ėjimo Trukmė</string>
+    <string name="str_HighestCaptureInOneTurn">Daugiausia Taškų per Vieną Ejimą</string>
+    <string name="str_AverageScorePerGame">Vidutinis Taškų Kiekis per Žaidimą</string>
+    <string name="str_HighestNumberOfConsecutiveTurns">Didžiausias Skaičius Ėjimų iš Eilės</string>
+    <string name="str_YouWon">JŪS LAIMĖJOTE</string>
+    <string name="str_YouLost">JŪS PRALAIMĖJOTE</string>
+    <string name="str_ItsADraw">LYGIOSIOS</string>
+    <string name="str_AnotherTurn">JŪS GAVOTE PAPILDIMĄ ĖJIMĄ</string>
+    <string name="str_YouWereRobbed">JUS APVOGĖ</string>
+    <string name="str_YouRobbedOtherPlayer">JŪS APVOGĖTE SAVO PRIEŠININKĄ</string>
+    <string name="str_YouWereRobbedOfFinalMove">PRIEŠININKAS PAVOGĖ TAVO PASKUTINĮ ĖJIMĄ</string>
+    <string name="str_YouRobbedOtherPlayersFinalMove">JŪS PAVOGĖTE PASKITINĮ ĖJIMĄ IŠ PRIEŠININKO</string>
+    <string name="str_Play">Žaisti</string>
+    <string name="str_Leaderboard">TOP Žaidėjai</string>
+    <string name="str_Tutorial">Instrukcijos</string>
+    <string name="str_FirstMoveTutorial">Pirmas Ėjimas</string>
+    <string name="str_ExtraMovesTutorial">Papildomi Ėjimai</string>
+    <string name="str_RobbingMechanicTutorial">Vogimo Taisykle</string>
+    <string name="str_Options">Pasirinkimai</string>
+    <string name="str_playerDisconnectedTitle">Žaidėjas Atsijungė</string>
+    <string name="str_playerDisconnected">Priešininkas paliko žaidimą.</string>
+    <string name="str_Player">Žaidėjas</string>
+    <string name="str_NameHolder">Vardas</string>
+    <string name="str_IPHolder">IP Adresas</string>
+    <string name="str_VS">Prieš</string>
+    <string name="str_Ai">Kompiuteris</string>
+    <string name="str_Remote">LAN</string>
+    <string name="str_AiDiff">AI Sunkumas</string>
+    <string name="str_Name">Vardas:</string>
+    <string name="str_Join">Prisijungti</string>
+    <string name="str_Host">Šeimininkas</string>
     <string name="str_IP">IP:</string>
-    <string name="str_Waiting">Waiting for player</string>
-    <string name="str_Select">Select</string>
-    <string name="str_Back">Back</string>
-    <string name="msg_PlayerName">Please enter player name!</string>
-    <string name="msg_Player1Name">Please enter player 1 name!</string>
-    <string name="msg_Player2Name">Please enter player 2 name!</string>
-    <string name="msg_IPAddress">Please enter an IP address!</string>
-    <string name="msg_ReturnToMenu">Return to Main Menu</string>
-    <string name="str_no_stats_data">There are no data available. Try playing more games!</string>
-    <string name="str_Mute">Mute\nMusic</string>
+    <string name="str_Waiting">Laukiama Priešininko</string>
+    <string name="str_Select">Pasirinkti</string>
+    <string name="str_Back">Atgal</string>
+    <string name="msg_PlayerName">Įveskite žaidejo vardą!</string>
+    <string name="msg_Player1Name">Įveskite Pirmo žaidejo vardą!</string>
+    <string name="msg_Player2Name">Įveskite Antro žaidejo vardą!</string>
+    <string name="msg_IPAddress">Įveskite IP adresą!</string>
+    <string name="msg_ReturnToMenu">Sugrišti į Meniu</string>
+    <string name="str_no_stats_data">Statistikos nerasta. Sužaiskite daugiau žaidimų.</string>
+    <string name="str_Mute">Nutildyti\nMuziką</string>
     <string-array name="ai_names">
-        <item>Easy Pete</item>
-        <item>Average Alan</item>
-        <item>TrollMaster 9000</item>
+        <item>Kaimo Juzė</item>
+        <item>Vidutinis Vudis</item>
+        <item>OptimusPranas 9000</item>
     </string-array>
-    <string name="ai_sensei">Sensei Sato</string>
-    <string name="student">Student</string>
-    <string name="str_tapWhenYourReady">TAP WHEN YOU\'RE READY FOR COUNTDOWN!</string>
-    <string name="str_tapAShells">CHOOSE YOUR STARTING SHELL</string>
-    <string name="str_ConnectionEst">Connection Established</string>
+    <string name="ai_sensei">Mokytojas Pranas</string>
+    <string name="student">Mokinys</string>
+    <string name="str_tapWhenYourReady">PALIESKITE EKRANĄ KAI BŪSITE PASIREGĘ PRADĖTI!</string>
+    <string name="str_tapAShells">PASIRINKITE SAVO PRADINĮ DUBENĖLĮ</string>
+    <string name="str_ConnectionEst">Prisijungta sėkmingai</string>
     <string name="msg_Help"><b>How to play:</b>
         \nYou own the seven cups on your side and your store is the larger cup on your right.
         \nAt the start of the game, tap a cup on your side after the countdown finishes. The first player to distribute their shells gets the first move.
@@ -65,42 +65,42 @@
         \nThe game ends when no shells exist in the small cups, and the player with the most shells in their store wins.
         \n\nMade by Tim Beswick, Oliver Philip Höhn, Max Karasiński, Martin Kubat and Dovydas Rupšys.</string>
 
-    <string name="msg_TutorialFirstMove"><b>First Move:</b>
-        \nThe game of Sungka begins in a simultaneous move mode. After the countdown finishes, both players make their first moves as fast as possible. This is because the player that finishes their move first mode gets to start in the next round.
-        \nNote that choosing your left most cup will grant you an extra move, which means you would have to finish that in addition to exhausting all of your moves.
-        \nYour cups are at the bottom of the screen. Tap on the screen to begin the countdown!</string>
+    <string name="msg_TutorialFirstMove"><b>Primo ėjimo etapas:</b>
+        \nSungkos žaidimas prasida abiems žaidėjams vienu metu. Žaidimo pradžioje po trijų sekundžių pauzės abu žaidejai bando išnaudoti savo ėjimą kiek įmanoma greičiau. Žaidėjas kuris užbaigs savo ėjimą pirmas pradės kitą etapą.
+        \nAtkreipkite dėmesį į tai, kad pasirinkus kairįjį dubenėlį jūs gausite papildomą ėjimą. Šis ėjimas turės būti išnaudotas, kad jūs užbaigtumėte savo pirmąjį ėjimą.
+        \nJūsų puodeliai yra ekrano apačioje. Palieskite ekraną kai būsite pasirengę!</string>
 
-    <string name="msg_TutorialFirstMoveEnd"><b>First Move Tutorial End:</b>
-        \nThis is the end of the tutorial, go back to the main menu by pressing the button in the center of the screen.</string>
+    <string name="msg_TutorialFirstMoveEnd"><b>Pirmo ėjimo instrukcijų pabaiga:</b>
+        \nApmokymo pabaiga. Grįškite į pagrindinį meniu spausdami mygtuką ekrano viduryje.</string>
 
-    <string name="msg_TutorialExtraMoves1"><b>Extra Moves:</b>
-        \nThis tutorial will explain the mechanics of extra moves. An extra move allows you to perform multiple consecutive actions. An extra move is gained if the last shell of the move is dropped in the players store.
-        \nTap on the left most cup, notice that the last shell distributed ends up in your store. This means that you will get an extra turn.</string>
+    <string name="msg_TutorialExtraMoves1"><b>Papildomi ėjimai:</b>
+        \nŠis apmokymas paaiškins papildomų ėjimų veikimą. Papildomi ėjimai leidžia eiti kelis kartus iš eilės. Norint gauti papildomą ėjimą jūsų ėjimas turi pasibaigti ant žaidėjo saugyklos (dubenėlio). Jūsų saugykla yra didelis rutulys dešinėje pusėje.
+        \nPaspauskite ant pažymėto dubenėlio ir stebėkite kur baigsis jūsų ėjimas.</string>
 
-    <string name="msg_TutorialExtraMoves2"><b>Extra Moves:</b>
-        \nThe two right most cups on your side of the board would both lead to an extra move however the order in which you tap them matters.
-        \nFor the purpose of this tutorial, select the second cup from the right. Notice that the right most cup will no longer give you an extra move.
-        \nBoth of these cups can give you an extra move if tapped in the proper order.</string>
+    <string name="msg_TutorialExtraMoves2"><b>Papildomi ėjimai:</b>
+        \nDu dešiniausi dubeneliai jūsų lentos pusėje gali suteikti jums papildomus ėjimus, bet, norint gauti šiuos ėjimus, jūs turite atlikti juos teisinga tvarka.
+        \nŠio apmokymo tikslui pasirinkite antrą puodelį iš dešinės. Pastebėkite, kad dešiniausias puodelis nebeduos jums pabildomo ėjimo.
+        \nAbu šie puodeliai papildomą ėjimą suteikia tada, kai yra pasirinkti teisinga tvarka.</string>
 
-    <string name="msg_TutorialExtraMoves3"><b>Extra Moves:</b>
-        \nFollow the next couple of moves and notice how multiple extra moves can be chained one after another.</string>
+    <string name="msg_TutorialExtraMoves3"><b>Papildomi ėjimai:</b>
+        \nSekite kelis kitus ėjimus ir stebėkite, kaip galima gauti keletą papildomų ėjimų iš eilės.</string>
 
-    <string name="msg_TutorialExtraMoves4"><b>Extra Moves:</b>
-        \nFinally you may have noticed that massive pile of shells in one of your cups. Tap on this cup, observe what happens and remember the rule of an extra move (if the last shell lands in your store you will get an extra move).</string>
+    <string name="msg_TutorialExtraMoves4"><b>Papildomi ėjimai:</b>
+        \nPastebėkite, kad vienas iš jūsų dubenėlių turi nemažą krūvelę kamuoliukų. Paspauskite ant šio dubenėlio ir stebėkite kas nutinka (jeigu paskutinis kamuoliukas pasilieka jūsų saugykloje, jūs gaunate papildomą ėjimą).</string>
 
-    <string name="msg_TutorialRobbing1"><b>Robbing Rule:</b>
-        \nOne of the rules in the game of Sungka allows the player to steal all shells from the opponent’s cup. This rule says that if the last shell of the move lands in one of your empty cups (except your store!), then the last shell and all the shells from the cup on the opposite side of the board are moved to your store.
-        \nTry this out yourself, select the highlighted cup and see what happens.</string>
+    <string name="msg_TutorialRobbing1"><b>Vogimo Taisykle:</b>
+        \nViena iš taisykių Sungkos žaidime leidžia pavogti kamuoliukus iš priešininko pusėje esančių dubenėlių. Jeigu paskutinis jūsų ėjimo kamuolikas pasilieka viename iš jums priklausančių tuščių dubenėlių, tas kamiuoliukas ir visi kamuoliukai iš priešiniko pusėje esančio dubenėlio yra perkeliami į tavo saugyklą.
+        \nIšbandykite šią taisyklę pasirinkdami pažymėtą dubenėlį.</string>
 
-        <string name="msg_TutorialRobbing2"><b>Robbing Rule:</b>
-            \nIt is very easy to notice obvious moves that lead to robbing. However, you should be careful as it is very easy to focus too much on these moves and in the process miss negative effects of them.
-            \nTry it one more time. Notice that the same rule applies even when it goes through your opponents cups, as long as it ends in your empty cup.</string>
+    <string name="msg_TutorialRobbing2"><b>Vogimo Taisykle:</b>
+        \nApiplėšti priešininka nėra labai sunku, tačiau reikia atkreipti dėmesį į tai kiek naudos jums tai atneš.
+        \nPabandikite dar karta, si karta jusu ejimas praeis per priesininko lenta bet tai nera svarbu nes paskutinis kamuoliukas vistiek pasilieka viename is jusu tusciu dubeneliu.
+        \nPabandykite dar kartą, šį kartą jūsų ėjimo metu kamuoliukai bus metami į priešininko dubenėlius, bet tai nėra svarbu jeigu ejimas baigsis jūsų lentos pusėje, tuščiame dubenėlyje.</string>
 
-    <string name="msg_TutorialRobbing3"><b>Robbing Rule:</b>
-        \nWhenever you have 15 shells in one of your cups, tapping on that cup will always result in robbing the opposite cup. Press on your leftmost cup and see what happens.</string>
+    <string name="msg_TutorialRobbing3"><b>Vogimo Taisykle:</b>
+        \nJeigu vienas iš jūsų dubenėlių turi lygiai 15 kamuoliukų, pasirinkus šitą ėjimą jūs visada pavogsite iš priešiniko. Pasirinkite kairiausią dubenėlį ir stebėkite kas vyksta.</string>
 
-    <string name="msg_TutorialEnd"><b>End of Tutorial:</b>
-        \nYou can continue playing or you can exit by using the back button. The player with the most amount of shells in the players store wins the game.</string>
-
+    <string name="msg_TutorialEnd"><b>Instructazo Pabaiga:</b>
+        \nŽaidėjęs surinkęs daugiau kamuoliukų savo saugykloje, žaidimo pabaigoje, laimi. Galite tęsti šį žaidimą arba išeikite paspaudus mygtuką atgal.</string>
 
 </resources>
