--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -2,20 +2,20 @@
 <resources>
     <string name="app_name">Sungka</string>
     <string name="action_settings">Nastavení</string>
-    <string name="msg_IPAddress">Prosím zadejte IP adresu!</string>
-    <string name="msg_Player1Name">Prosím zadejte jméno prvního hráče!</string>
-    <string name="msg_Player2Name">Prosím zadejte jméno druhého hráče!</string>
-    <string name="msg_PlayerName">Prosím zadejte jméno hráče!</string>
-    <string name="msg_ReturnToMenu">Vrátit se na hlavní stránku</string>
+    <string name="msg_IPAddress">Prosím zadej IP adresu!</string>
+    <string name="msg_Player1Name">Prosím zadej jméno prvního hráče!</string>
+    <string name="msg_Player2Name">Prosím zadej jméno druhého hráče!</string>
+    <string name="msg_PlayerName">Prosím zadej jméno hráče!</string>
+    <string name="msg_ReturnToMenu">Návrat na hlavní stránku</string>
     <string name="str_Ai">AI</string>
     <string name="str_AiDiff">Obtížnost</string>
-    <string name="str_AnotherTurn">MÁTE DALŠÍ TAH</string>
+    <string name="str_AnotherTurn">MÁŠ DALŠÍ TAH</string>
     <string name="str_AverageMoveTime">Průměrný čas tahu</string>
     <string name="str_AverageScorePerGame">Průměrný počet bodů ve hře</string>
     <string name="str_Back">Zpátky</string>
-    <string name="str_HighestCaptureInOneTurn">Nejvyšší počet ulovení v jednom kole</string>
+    <string name="str_HighestCaptureInOneTurn">Nejvyšší počet zásahů v jednom kole</string>
     <string name="str_ConnectionEst">Spojení navázáno</string>
-    <string name="str_HighestNumberOfConsecutiveTurns">Nejvyšší počet následujících kolech</string>
+    <string name="str_HighestNumberOfConsecutiveTurns">Nejvyšší počet následných kol</string>
     <string name="str_Host">Hostitel</string>
     <string name="str_IP">IP:</string>
     <string name="str_IPHolder">IP Adresa</string>
@@ -39,12 +39,12 @@
     <string name="str_playerDisconnectedTitle">Protihráč se odpojil</string>
     <string name="str_tapAShells">Vyberte svojí první mušli</string>
     <string name="str_tapWhenYourReady">Klepněte na obrazovku když budete připravený</string>
-    <string name="str_no_stats_data">Nejsou k dizpozici žádný data. Zkuste hrát víc her!</string>
-    <string name="str_YouRobbedOtherPlayer">OKRADL JSTE PROTIHRÁČE</string>
-    <string name="str_YouRobbedOtherPlayersFinalMove">OKRADL JSTE PROTIHRÁČOVO POSLEDNI TAH</string>
-    <string name="str_YouWereRobbed">BYL JSTE OKRAZENÍ</string>
-    <string name="str_YouWereRobbedOfFinalMove">BYL JSTE OKRAZENÍ O SVŮJ POSLEDNÍ TAH</string>
-    <string name="str_YouWon">VYHRÁL JSTE</string>
+    <string name="str_no_stats_data">Nejsou k dizpozici žádná data. Zkus hrát více her!</string>
+    <string name="str_YouRobbedOtherPlayer">OKRADL JSI PROTIHRÁČE</string>
+    <string name="str_YouRobbedOtherPlayersFinalMove">OKRADL JSI PROTIHRÁČŮV POSLEDNI TAH</string>
+    <string name="str_YouWereRobbed">BYL JSI OKRAZENÍ</string>
+    <string name="str_YouWereRobbedOfFinalMove">BYL JSI OKRAZEN O SVŮJ POSLEDNÍ TAH</string>
+    <string name="str_YouWon">VYHRÁL JSI</string>
     <string name="str_YourTurn">TVOJE KOLO</string>
     <string name="str_playerDisconnected">Vypadá to, že druhý hráč odešel.</string>
     <string name="str_Tutorial">Cvičení</string>
